force-app/main/default/objects/sugati__Communication_Preference_History__c/sugati__Communication_Preference_History__c.object-meta.xml
<CustomObject>
    <label>Communication Preference History</label>
    <nameField>
        <displayFormat>CPH-{0000000}</displayFormat>
        <label>Communication Preference History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Communication Preference Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>