force-app/main/default/objects/sugati__Communication_Preference_History__c/fields/sugati__CPH_Action__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPH_Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opted In</fullName>
            </value>
            <value>
                <fullName>Opted Out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>