force-app/main/default/objects/sugati__Communication_Preference_History__c/fields/sugati__CPH_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPH_Campaign_Name__c</fullName>
    <formula>sugati__CPH_Campaign__r.Name</formula>
    <label>Campaign Name</label>
    <type>Text</type>
</CustomField>