force-app/main/default/objects/sugati__Communication_Preference_History__c/fields/sugati__CPH_Communication_Preference__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPH_Communication_Preference__c</fullName>
    <label>Communication Preference</label>
    <referenceTo>sugati__Communication_Preference2__c</referenceTo>
    <relationshipLabel>Communication Preference Histories</relationshipLabel>
    <relationshipName>Communication_Preference_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>