force-app/main/default/objects/sugati__Communication_Preference_History__c/fields/sugati__CPH_Lead__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPH_Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Communication Preference Histories</relationshipLabel>
    <relationshipName>Communication_Preference_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>