force-app/main/default/objects/sugati__Communication_Preference_History__c/fields/sugati__CPH_Opt_Out_Reason__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPH_Opt_Out_Reason__c</fullName>
    <label>Opt Out Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not want to be contacted</fullName>
            </value>
            <value>
                <fullName>Information is irrelevant</fullName>
            </value>
            <value>
                <fullName>Not interested</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>