force-app/main/default/objects/sugati__Communication_Preference_History__c/fields/sugati__CPH_Opt_Out_Reason_Other__c.field-meta.xml
<CustomField>
    <fullName>sugati__CPH_Opt_Out_Reason_Other__c</fullName>
    <label>Opt Out Reason Other</label>
    <type>TextArea</type>
</CustomField>